# videoparquet

./: BENCHMARK.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
tests/: test_autoshape.py  test_benchmark.py  test_roundtrip.py
videoparquet/: __init__.py  av_wrappers.py  ffmpeg_wrappers.py  parquet2video.py  utils.py  video2parquet.py
