[project]
name = "videoparquet"
version = "0.2.0"
description = "Convert Parquet files to video and back using native PyAV encoding"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["parquet", "video", "compression", "scientific-data", "lossless"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Multimedia :: Video",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "pyarrow",
    "pandas",
    "numpy",
    "av",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "twine",
    "build"
]

[project.urls]
Documentation = "https://github.com/yourusername/videoparquet"
Source = "https://github.com/yourusername/videoparquet"
Tracker = "https://github.com/yourusername/videoparquet/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
videoparquet = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
